# sequal

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  amino_acid.html  amino_acid.py  base_block.html  base_block.py  genindex.html  index.html  ion.html  ion.py  mass.html  mass_spectrometry.html  mass_spectrometry.py  mass_spectrometry_test.py  mass_test.py  modification.html  modification.py  objects.inv  proforma.html  py-modindex.html  pyproject.toml  resources.html  search.html  searchindex.js  sequence.html  sequence.py  sequence_test.py  setup.cfg  setup.py
.doctrees/: amino_acid.doctree  base_block.doctree  environment.pickle  index.doctree  ion.doctree  mass.doctree  mass_spectrometry.doctree  modification.doctree  proforma.doctree  resources.doctree  sequence.doctree
.github/workflows/: gh-pages.yml  test.yml
_modules/: index.html
_modules/sequal/: amino_acid.html  base_block.html  ion.html  mass.html  mass_spectrometry.html  modification.html  proforma.html  sequence.html
_sources/: base_block.rst.txt  index.rst.txt  proforma.rst.txt  resources.rst.txt
docs/: amino_acid.rst  conf.py  ion.rst  mass.rst  mass_spectrometry.rst  modification.rst  sequence.rst
sequal/: amino_acid.py  base_block.py  ion.py  mass.py  mass_spectrometry.py  mass_spectrometry_test.py  mass_test.py  modification.py  proforma.py  resources.py  sequence.py  sequence_test.py
tests/: mass_spectrometry_test.py  mass_test.py  modification_test.py  proforma_2_1_integration_test.py  sequence_test.py
