[metadata]
name = sequal
version = 1.0.0
author = Toan K. Phung
description = This is an example project
long_description = This is a longer description for the project
url = https://github.com/noatgnu/sequal
keywords = protein sequence, modification, mass spectrometry
license = MIT
author_email= toan.phung@acryno.me

[options]
python_requires = >=3.9, <4

[bdist_rpm]
release = 1
packager = Toan K. Phung <toan.phung@acryno.me>
doc_files = README.md